--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Adolfo León</title>
 </head>
 <body>
+
+    <!-- Hero -->
     <section class="hero">
         <div class="container">
             <h1 class="display-4">Hola, soy Adolfo León</h1>
@@ -17,6 +19,87 @@
             <a href="#" class="btn btn-outline-secondary">Contáctame</a>
         </div>
     </section>
+
+    <!-- Sobre mi -->
+    <section id="id" class="container">
+        <h2 class="section-title">Sobre mi</h2>
+        <p>
+            Hola, soy Adolfo León, un ingeniero en desarrollo y gestión de software 
+            con una pasión por crear soluciones innovadoras. 
+            Tengo experiencia en diversas tecnologías y metodologías de desarrollo, 
+            y me encanta enfrentar nuevos desafíos.
+        </p>
+    </section>
+
+    <!-- Habilidades -->
+    <section id="habilidades" class="container">
+        <h2 class="section-title">Habilidades Técnicas</h2>
+        <ul class="list-group">
+            <li class="list-group-item">Desarrollo Web</li>
+            <li class="list-group-item">Gestión de Proyectos</li>
+            <li class="list-group-item">Bases de Datos</li>
+            <li class="list-group-item">Metodologías Ágiles</li>
+            <li class="list-group-item">Programación en Python, JavaScript, y más</li>
+        </ul>
+    </section>
+
+    <!-- Proyectos -->
+    <section id="proyectos" class="container">
+        <h2 class="section-title">Proyectos Destacados</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Proyecto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Proyecto 1</h5>
+                        <p class="card-text">Descripción breve del proyecto 1. Un proyecto innovador que resuelve problemas reales.</p>
+                        <a href="#" class="btn btn-primary">Ver más</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Proyecto 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Proyecto 2</h5>
+                        <p class="card-text">Descripción breve del proyecto 2. Un proyecto que utiliza tecnologías avanzadas para mejorar la eficiencia.</p>
+                        <a href="#" class="btn btn-primary">Ver más</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Proyecto 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Proyecto 3</h5>
+                        <p class="card-text">Descripción breve del proyecto 3. Un proyecto que ha tenido un impacto significativo en la comunidad.</p>
+                        <a href="#" class="btn btn-primary">Ver más</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contacto -->
+    <section id="contacto" class="container">
+        <h2 class="section-title">Contacto</h2>
+        <form>
+            <div class="mb-3">
+                <label for="name" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="name" required>
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Correo Electrónico</label>
+                <input type="email" class="form-control" id="email" required>
+            </div>
+            <div class="mb-3">
+                <label for="message" class="form-label">Mensaje</label>
+                <textarea class="form-control" id="message" rows="4" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js" integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D" crossorigin="anonymous"></script>
 </body>
