--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
     <!-- Sobre mi -->
     <section id="id" class="container">
         <h2 class="section-title">Sobre mi</h2>
-        <p>
-            Hola, soy Adolfo León, un ingeniero en desarrollo y gestión de software 
-            con una pasión por crear soluciones innovadoras. 
-            Tengo experiencia en diversas tecnologías y metodologías de desarrollo, 
-            y me encanta enfrentar nuevos desafíos.
+        <p class="text-center">
+            Hola, soy Adolfo León, un ingeniero en desarrollo y gestión de software con una fuerte pasión por crear soluciones innovadoras que aporten valor real. Cuento con experiencia en desarrollo backend, especialmente con tecnologías como Java, Spring Framework y bases de datos como Oracle y MySQL.
+            Me gusta diseñar APIs eficientes, seguras y escalables, y disfruto trabajar con metodologías ágiles y herramientas modernas como Git, Docker y CI/CD.
+            Siempre estoy buscando aprender, enfrentar nuevos desafíos y colaborar en equipos donde se fomente la mejora continua y el desarrollo profesional.
         </p>
     </section>
 
